@@ -1,3 +1,9 @@
+2001-03-13  Jim Wilson  <wilson@redhat.com>
+
+	* config/ia64/ia64.c (find_gr_spill): Subtract frame_pointer_needed
+	from 80 in try_locals code.
+	(ia64_expand_prologue): Add comment pointing to find_gr_spill change.
+
 2001-03-13  Zack Weinberg  <zackw@stanford.edu>
 
 	* aclocal.m4 (gcc_AC_COMPILE_CHECK_SIZEOF, gcc_AC_C_CHAR_BIT,
